style.css
/* ... */
.service-row__desc h4 {
	margin-top: 0;
	margin-bottom: 20px;
	color: #000;
	font-size: 18px;
	line-height: 18px;
}

.service-row__desc p {
	margin-top: 0;
	margin-bottom: 40px;
}

.service-row__desc p.padded {
	padding-left: 20px;
}

.service-row__desc ul,
.service-row__desc ol {
	margin: 0 0 40px;
	padding-left: 20px;
}

.service-row__desc ul li,
.service-row__desc ol li {
	margin-bottom: 10px;
}

.service-row__pricelist {
	margin-top: 60px;
}


/**
 *  Service Row After Content
 */

.service-row-after {
	margin-bottom: 140px;
}


/**
 *  Service list
 */

.services-pricelist {
	font-size: 16px;
	line-height: 15px;
}

.services-pricelist__header {
	display: flex;
	align-items: center;
	justify-content: space-between;
	margin-bottom: 24px;
}

.services-pricelist_complex .services-pricelist__header {
	display: grid;
	grid-template-columns: 1fr repeat(4, 65px);
	grid-column-gap: 26px;
	padding-right: 29px;
}

.services-pricelist__category {
	font-weight: bold;
	font-size: 18px;
	line-height: 17px;
}

.services-pricelist__master-label {
	font-weight: bold;
	font-size: 16px;
	line-height: 15px;
}

.services-pricelist__length-label {
	text-align: center;
}

.services-pricelist__item {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding: 6px;
}

.services-pricelist_complex .services-pricelist__item {
	display: grid;
	grid-template-columns: 1fr repeat(4, 65px);
	grid-column-gap: 26px;
	padding: 10px 29px 10px 10px;
}

.services-pricelist__item:nth-child(odd) {
	background-color: #F2F2F2;
}

.services-pricelist__price-col {
	text-align: center;
}

.services-pricelist__price {
	font-weight: bold;
}


/**
 *  Related Pages Block
 */

.related-pages {
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
	grid-gap: 20px;
}

.related-pages__item {
	background: white;
	border-radius: 4px;
	overflow: hidden;
}

.related-pages__item a {
	text-decoration: none;
}

.related-pages__item img {
	display: block;
	width: 100%;
}

.related-pages__title {
	padding: 20px 60px;
	color: black;
	font-weight: bold;
	text-align: center;
	text-transform: lowercase;
}


/**
 *  Vacancies
 */

.vacancies {
	display: grid;
	grid-template-columns: minmax(auto, 512px) 1fr;
}

.vacancies__list {
	border-right: 1px solid #C4C4C4;
}

.vacancies__list > ul {
	list-style: none;
	margin: 0;
	padding: 0;
}

.vacancies__item {
	display: flex;
	align-items: center;
	margin-bottom: 30px;
	padding-top: 21px;
}

.vacancies__item:last-child {
	margin-bottom: 0;
}

.vacancies__item-btn {
	position: relative;
	padding: 0;
	font-size: 32px;
	line-height: 31px;
	text-align: left;
	background: transparent;
	border: 0;
	cursor: pointer;
}

.vacancies__item-btn:focus {
	outline: none;
}

.vacancies__item-badge {
	position: absolute;
	left: 0;
	bottom: calc(100% + 4px);
	color: var(--pdp-primary);
	font-weight: bold;
	font-size: 18px;
	line-height: 17px;
}

.vacancies__item-icon {
	margin-right: 16px;
}

.vacancies__item-icon svg {
	display: block;
}

.vacancies__item .vacancies__item-icon svg path {
	fill: #C4C4C4;
	transition: fill 200ms ease;
}

.vacancies__item.active .vacancies__item-icon svg path,
.vacancies__item:hover .vacancies__item-icon svg path {
	fill: #0E0D0A;
}

.vacancies__details {
	padding: 0 0 0 55px;
}

.vacancies__details-block {
	display: none;
	margin-bottom: 60px;
}

.vacancies__details-block.active {
	display: block;
}

.vacancies__content ul {
	margin: 0;
	padding-left: 16px;
}

.vacancies__form h3 {
	margin-top: 0;
	margin-bottom: 20px;
	font-size: 24px;
	line-height: 23px;
	text-align: center;
}

.vacancies__form .input.input--message {
	height: 130px;
}

.vacancies__form .form__submit {
	text-align: center;
}


/**
 *  Blog Archive - Header
 */

.blog-header {
	display: flex;
}

.blog-header__content {
	flex-grow: 1;
}

.blog-header__title {
	margin: 68px 0 0 0;
	font-size: 64px;
	line-height: 61px;
}

.blog-header__subtitle {
	max-width: 300px;
	margin-bottom: 20px;
	font-weight: 500;
	font-size: 36px;
	line-height: 34px;
}

.blog-header__desc {
	font-weight: 300;
	font-size: 18px;
	line-height: 17px;
}

.blog-header > img {
	flex-shrink: 0;
	margin-left: 114px;
}


/**
 *  Blog Archive - Filter
 */

.blog-filter {
	display: flex;
	align-items: center;
	margin-bottom: 40px;
}

.blog-filter__sort {
	margin-right: 25px;
}

.blog-filter__sort-btn {
	width: 24px;
	height: 24px;
}

.blog-filter__search {
	flex-grow: 1;
}


/**
 *  Blog Archive - Tags
 */

.blog-tags {
	display: flex;
}

.blog-tags__item {
	flex-shrink: 0;
	margin-right: 12px;
	color: black;
	font-size: 20px;
	line-height: 20px;
	text-decoration: none;
}

.blog-tags__item:visited {
	color: black;
}

.blog-tags__item:last-child {
	margin-right: 0;
}

.blog-tags__item.active {
	font-weight: bold;
}


/**
 * Blog Archive - Listing
 */

.blog-items_grid {
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
	grid-gap: 24px;
}


/**
 *  Blog Archive - Listing Item
 */

.blog-item {
	display: flex;
	flex-direction: column;
	background: white;
	border-radius: 4px;
}

.blog-item > img {
	display: block;
	width: 100%;
	object-fit: cover;
	border-radius: 4px 4px 0 0;
}

.blog-item__info {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	flex-grow: 1;
	padding: 20px;
}

.blog-item__meta {
	display: flex;
	align-items: center;
	margin-bottom: 12px;
	color: var(--pdp-primary);
	font-size: 16px;
	line-height: 16px;
}

.blog-item__meta-separator {
	width: 1px;
	height: 14px;
	margin: 0 10px;
	background: var(--pdp-primary);
}

.blog-item__likes {
	display: flex;
	align-items: center;
}

.blog-item__likes svg {
	margin-right: 4px;
}

.blog-item__title {
	margin: 0 0 20px;
	font-size: 16px;
	line-height: 16px;
}

.blog-item__title a {
	color: black;
	text-decoration: none;
}

.blog-item__read-more {
	margin-top: auto;
}


/**
 *  Blog Archive - Pagination
 */

.blog-pagination {
	display: flex;
	justify-content: center;
	margin-top: 20px;
}
/* ... */

